fix: experimental Chat Box resizing + emoji picker changes This is not a great commit, there's many workarounds being used that feel more unreadable than they should be, and even more difficult to debug in the future, but in theory, this might make things nicer cross-OS and allow Chatstr to be nicely responsive, I hope...

--- a/src/styles.css
+++ b/src/styles.css
@@ -170,7 +170,8 @@ body {
   align-items: flex-end;
   overflow-y: scroll;
   background-color: #040308;
-  height: 462px;
+  /* An imperfect solution attempting to fit the message list within it's Chat Box proportionately to the window height */
+  height: calc(100% - 80px);
   padding-left: 10px;
   padding-right: 10px;
   border-top-style: solid;
@@ -254,6 +255,8 @@ body {
   width: 100%;
   background-color: #251134ff;
   height: 55px;
+  position: absolute;
+  bottom: 0;
 }
 
 #chat-input {
